update setup pin mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,6 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "arduino.path": "C:\\Users\\mbeah\\dev\\arduino"
+  "arduino.path": "C:\\Users\\mbeah\\dev\\arduino",
+  "gitConfigUser.selectedProfile": "kratosgado"
 }
